objects/RTAT_Slot__c.object
<CustomObject>
    <description>This represents the slot in the fab that the new product&apos;s lot will run it.   
It will show all the inputs needed to build the RTAT schedules
It will be linked to the lot&apos;s 3 possible schedules:
  WAFER Build Fab Schedule
  Wafer Finish Schedule
  Module Build Schedule</description>
    <fields>
        <fullName>Conversion_Lot_Number__c</fullName>
        <label>Conversion Lot Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Device_Deliverable_Type__c</fullName>
        <formula>TEXT(ERP_Device_for_Slot__r.Deliverable_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ERP Device Deliverable Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Device_Fab__c</fullName>
        <formula>IF( INCLUDES( ERP_Device_for_Slot__r.Fab__c , &apos;FAB 9&apos;), &apos;FAB 9&apos;, 
     IF(INCLUDES( ERP_Device_for_Slot__r.Fab__c , &apos;FAB 10&apos;), &apos;FAB 10&apos;, 
        IF(INCLUDES( ERP_Device_for_Slot__r.Fab__c , &apos;XFAB&apos;), &apos;XFAB&apos;, &apos;FAB 1-8&apos; )
       )
   )</formula>
        <label>ERP Device Fab</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Device_Technology__c</fullName>
        <formula>ERP_Device_for_Slot__r.Technology__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ERP Device Technology</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Device_for_Slot__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The ERP Device that will provide input to create the Slot&apos;s schedules</description>
        <label>ERP Device</label>
        <referenceTo>ERP_Device__c</referenceTo>
        <relationshipLabel>RTAT Slot</relationshipLabel>
        <relationshipName>RTAT_Slot</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fab__c</fullName>
        <description>FAB 9= BTV, FAB 10=EFK, XFAB=ALTIS</description>
        <label>Fab</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Wafer_Size__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FAB 9</fullName>
                </value>
                <value>
                    <fullName>FAB 10</fullName>
                </value>
                <value>
                    <fullName>XFAB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>General_Comments__c</fullName>
        <description>Field for notes, comments or directions</description>
        <label>General Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Charge_Code__c</fullName>
        <label>Internal Charge Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPW__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Multi Part Wafer?</description>
        <inlineHelpText>Multipart wafer</inlineHelpText>
        <label>MPW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mfg_Instructions__c</fullName>
        <description>Instructions for Manufacturing</description>
        <label>Mfg Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Not_Committed_Projection_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check only if the lot is not committed and is only projected</description>
        <inlineHelpText>Check only if the lot is not committed and is only projected.   This will be conveyed in the SAP order number section in the Customer Deliverable Summary section of the schedule output</inlineHelpText>
        <label>Not Committed - Projection Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAP_Order_Number__c</fullName>
        <description>Enter the order number from SAP</description>
        <label>SAP Order Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slot_Status__c</fullName>
        <description>Current status of the slot</description>
        <inlineHelpText>ACTIVE = work in progress
PUBLISHED = Complete and mailed
CANCELLED = Not to be used</inlineHelpText>
        <label>Slot Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACTIVE</fullName>
                    <default>true</default>
                    <label>ACTIVE</label>
                </value>
                <value>
                    <fullName>PUBLISHED</fullName>
                </value>
                <value>
                    <fullName>CANCELLED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Slot_Type__c</fullName>
        <label>Slot Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PROTO</fullName>
                </value>
                <value>
                    <fullName>EUH</fullName>
                </value>
                <value>
                    <fullName>PROD RTAT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Slot_Yield_Factor__c</fullName>
        <description>Slot yield factor, only applied to wafers, not chips or modules</description>
        <label>Slot Yield Factor</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <label>Technology</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Technology</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wafer_Size__c</fullName>
        <description>Size of wafers in millimeters</description>
        <label>Wafer Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>200MM</fullName>
                </value>
                <value>
                    <fullName>300MM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_If_scenario__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if this is a what if scenario.   If this is a real slot and schedule, leave unchecked</description>
        <label>What If scenario</label>
        <type>Checkbox</type>
    </fields>
    <label>RTAT Slot</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Wafer_Size__c</columns>
        <columns>ERP_Device_for_Slot__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>OBJECT_ID</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>RTAT Slot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RTAT Slots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ChooseDev_OR_Tech_and_Fab</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISBLANK(ERP_Device_for_Slot__c), ISPICKVAL(Technology__c,&quot;&quot;) , ISPICKVAL(Fab__c,&quot;&quot;))</errorConditionFormula>
        <errorMessage>Either link to an ERP Device, or choose Technology and Fab</errorMessage>
    </validationRules>
</CustomObject>